--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <h1>GitHub 入門</h1>
     <h2>YAHOOハンズオン</h2>
+    <h3>ブランチのテスト</h3>
 
     <!-- 変更箇所に困ったら下記のコメントアウトを外してください -->
     <!--<div id="target">ここをクリックするとアラート発生</div>-->
